--- a/app/views/paquete_turisticos/_form.html.erb
+++ b/app/views/paquete_turisticos/_form.html.erb
@@ -20,10 +20,10 @@
 						<a href="#datos" aria-controls="datos" role="tab" data-toggle="tab">Datos Básicos</a>
 				    </li>
 				    <li role="presentation">
-				    	<a href="#actividades" aria-controls="hotel" role="tab" data-toggle="tab">Actividades</a>
+				    	<a href="#itinerario" aria-controls="hotel" role="tab" data-toggle="tab">Itinerario</a>
 				    </li>
 				    <li role="presentation">
-				    	<a href="#itinerario" aria-controls="hotel" role="tab" data-toggle="tab">Itinerario</a>
+				    	<a href="#actividades" aria-controls="hotel" role="tab" data-toggle="tab">Actividades</a>
 				    </li>
 				    <li role="presentation">
 				    	<a href="#fechas" aria-controls="hotel" role="tab" data-toggle="tab">Agenda</a>
@@ -31,7 +31,7 @@
 				</ul>
 				<div class="tab-content tm-white-bg">
 					<div role="tabpanel" class="tab-pane fade in active tm-white-bg" id="datos">
-						<div class="tm-search-box effect2">
+						<div class="tm-search-box">
 							<p>&nbsp;</p>
 							<div class="col-lg-6 col-md-6 tm-white-bg">
 								<%= label_tag :lugar, "Destino del plan turístico*" %><br>
@@ -160,7 +160,7 @@
 						</div>
 					</div>
 					<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="actividades">
-						<div class="tm-search-box effect2">
+						<div class="tm-search-box">
 							<p>&nbsp;</p>
 							<table id="indexTable" class="stripe hover" align="center" width="80%">
 								<thead>
@@ -182,11 +182,11 @@
 						</div>
 					</div>
 					<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="itinerario">
-						<div class="tm-search-box effect2">
+						<div class="tm-search-box">
 						</div>
 					</div>
 					<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="fechas">
-						<div class="tm-search-box effect2">
+						<div class="tm-search-box">
 						</div>
 					</div>
 				</div>
