--- a/app/assets/stylesheets/templatemo-style.css
+++ b/app/assets/stylesheets/templatemo-style.css
@@ -12,6 +12,11 @@ ul,p {
 	margin: 0; 
 	padding: 0;
 }
+
+ul{
+	list-style:disc inside none;
+}
+
 h1,h2,h3 {
 	margin: 0;
 	padding: 0;
@@ -1210,8 +1215,8 @@ hr.vivo{border-top: 3px solid #ffff00; background-color:white; height:2px; margi
 .margin-bottom-5 { margin-bottom: 5px; }
 
 /*.tab-content{
-	overflow:auto;
-	background-color:white;
+	margin-bottom:20px;
+	padding:20px;
 }*/
 
 /* About */
