--- a/app/views/paquete_turisticos/_form.html.erb
+++ b/app/views/paquete_turisticos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@paquete_turistico) do |f| %>
+	<%= form_for(@paquete_turistico) do |f| %>
   <% if @paquete_turistico.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@paquete_turistico.errors.count, "error") %> prohibited this paquete_turistico from being saved:</h2>
@@ -33,132 +33,150 @@
 					<div role="tabpanel" class="tab-pane fade in active tm-white-bg" id="datos">
 						<div class="tm-search-box">
 							<p>&nbsp;</p>
-							<div class="col-lg-6 col-md-6 tm-white-bg">
-								<%= label_tag :lugar, "Destino del plan turístico*" %><br>
-								<%= radio_button_tag :paquete_turistico_pqTur_tipoDestino, "ENTIDAD TERRITORIAL", checked = true %>
-								<%= label_tag :paquete_turistico_pqTur_tipoDestino_ENTIDAD_TERRITORIAL, "Municipio o ciudad" %>
-								<div id="div_paquete_turistico_pqTur_tipoDestino_ENTIDAD_TERRITORIAL">
-									<!--++++++++++++++++++++++++++++++++++++++++++++-->
-									<%= render 'entidad_territorials/jerarquia_form'%>
-									<!--++++++++++++++++++++++++++++++++++++++++++++-->
+							<div class="col-lg-12 tm-white-bg">
+								<div class="col-lg-6 col-md-6">
+									<%= label_tag :lugar, "Destino del plan turístico*" %><br>
+									<%= radio_button_tag :paquete_turistico_pqTur_tipoDestino, "ENTIDAD TERRITORIAL", checked = true %>
+									<%= label_tag :paquete_turistico_pqTur_tipoDestino_ENTIDAD_TERRITORIAL, "Municipio o ciudad" %>
+									<div id="div_paquete_turistico_pqTur_tipoDestino_ENTIDAD_TERRITORIAL">
+										<!--++++++++++++++++++++++++++++++++++++++++++++-->
+										<%= render 'entidad_territorials/jerarquia_form'%>
+										<!--++++++++++++++++++++++++++++++++++++++++++++-->
+									</div>
 								</div>
-							</div>
-							<div class="col-lg-6 col-md-6 tm-white-bg">
-								<%= label_tag :lugar, " " %><br>
-								<%= radio_button_tag :paquete_turistico_pqTur_tipoDestino, "REGION" %>
-								<%= label_tag :paquete_turistico_pqTur_tipoDestino_REGION, "Región" %><br>
-								<div id="div_paquete_turistico_pqTur_tipoDestino_REGION">
-									<%= label_tag :entidad_territorial_region, "Entidad Territorial" %><br>
-									<%= select_tag :entidad_territorial_region, options_for_select(@padreRegion.map{|reg| [reg.enter_nombreCorto, reg.id]}), {class:"form-control", prompt:"--SELECCIONE--"}  %> <br>
-									<%= label_tag :region_id, "Región" %>
-									<%= select_tag :region_id, options_for_select([["SELECCIONE", ""]]), {class:"form-control"} %>
+								<div class="col-lg-6 col-md-6">
+									<%= label_tag :lugar, " " %><br>
+									<%= radio_button_tag :paquete_turistico_pqTur_tipoDestino, "REGION" %>
+									<%= label_tag :paquete_turistico_pqTur_tipoDestino_REGION, "Región" %><br>
+									<div id="div_paquete_turistico_pqTur_tipoDestino_REGION">
+										<%= label_tag :entidad_territorial_region, "Entidad Territorial" %><br>
+										<%= select_tag :entidad_territorial_region, options_for_select(@padreRegion.map{|reg| [reg.enter_nombreCorto, reg.id]}), {class:"form-control", prompt:"--SELECCIONE--"}  %> <br>
+										<%= label_tag :region_id, "Región" %>
+										<%= select_tag :region_id, options_for_select([["SELECCIONE", ""]]), {class:"form-control"} %>
+									</div>
 								</div>
-							</div>
-							<p>&nbsp;</p>
-							<div class="col-lg-12 col-md-12">
-								<table id="tarifas">
-									<thead>
-										<tr>
-											<th>CONCEPTO</th>
-											<th>PROMO</th>
-											<th>ECONO</th>
-											<th>BASE</th>
-											<th>FLEXI</th>
-										</tr>
-									</thead>
-									<tbody>
-										<% @tarifas.each do |tarifa| %>
+								<p>&nbsp;</p>
+								<div class="col-lg-12 col-md-12">
+									<table id="tarifas">
+										<thead>
 											<tr>
-												<td><%= tarifa.trf_concepto %></td>
-												<td><%= number_to_currency(tarifa.trf_promo) %></td>
-												<td><%= number_to_currency(tarifa.trf_econo) %></td>
-												<td><%= number_to_currency(tarifa.trf_base) %></td>
-												<td><%= number_to_currency(tarifa.trf_flexi) %></td>
+												<th>CONCEPTO</th>
+												<th>PROMO</th>
+												<th>ECONO</th>
+												<th>BASE</th>
+												<th>FLEXI</th>
 											</tr>
-										<% end %>
-									</tbody>
-								</table>
-								<%= link_to 'Nueva tarifa', new_paquete_turistico_tarifa_path(@paquete_turistico), class:"button add" %>
-							</div>
-							<p>&nbsp;</p>
-							<div class="col-lg-6 col-md-6 tm-white-bg">
-							  	<div class="form-group">
-							    	<%= f.label :pqTur_portada, "Foto de portada*" %><br>
-							    	<%= f.file_field :pqTur_portada, options={class:"form-control", required: :required} %>
-							  	</div>								
-							  	<div class="form-group">
-							    	<%= f.label :pqTur_nombre, "Nombre del Plan*" %><br>
-							    	<%= f.text_field :pqTur_nombre, options={class:"form-control", required: :required} %>
-							  	</div>
-							  	<div class="form-group">
-							    	<%= f.label :pqTur_duracion, "Duración (días)*" %><br>
-							    	<%= f.select :pqTur_duracion, options_for_select( (1..10).step(1).map{|n| n%1 == 0 ? n.to_i : n}, @paquete_turistico.pqTur_duracion ), {prompt:"--SELECCIONE--"},options={class:"form-control", required: :required} %>
-							  	</div>
-					  			<div class="form-group">
-					    			<%= f.label :pqTur_descripcion, "Descripción*" %><br>
-					    			<%= f.text_area :pqTur_descripcion, options={class:"form-control", required: :required, cols:20, rows:8} %>
-					  			</div>
-								<div class="form-group">
-								    <%= f.label :pqTur_incluye, "Paquete incluye*" %><br>
-								    <%= f.text_area :pqTur_incluye, options={class:"form-control", required: :required, cols:20, rows:9} %>
+										</thead>
+										<tbody>
+											<% @tarifas.each do |tarifa| %>
+												<tr>
+													<td><%= tarifa.trf_concepto %></td>
+													<td><%= number_to_currency(tarifa.trf_promo) %></td>
+													<td><%= number_to_currency(tarifa.trf_econo) %></td>
+													<td><%= number_to_currency(tarifa.trf_base) %></td>
+													<td><%= number_to_currency(tarifa.trf_flexi) %></td>
+												</tr>
+											<% end %>
+										</tbody>
+									</table>
+									<%= link_to 'Nueva tarifa', new_paquete_turistico_tarifa_path(@paquete_turistico), class:"button add" %>
 								</div>
-								<div class="form-group">
-								    <%= f.label :pqTur_noIncluye, "Paquete No Incluye*" %><br>
-								    <%= f.text_area :pqTur_noIncluye, options={class:"form-control", required: :required, cols:20, rows:8} %>
+								<p>&nbsp;</p>
+								<div class="col-lg-6 col-md-6 tm-white-bg">
+								  	<div class="form-group">
+								    	<%= f.label :pqTur_portada, "Foto de portada*" %><br>
+								    	<%= f.file_field :pqTur_portada, options={class:"form-control"} %>
+								  	</div>								
+								  	<div class="form-group">
+								    	<%= f.label :pqTur_nombre, "Nombre del Plan*" %><br>
+								    	<%= f.text_field :pqTur_nombre, options={class:"form-control", required: :required} %>
+								  	</div>
+								  	<div class="form-group">
+								    	<%= f.label :pqTur_duracion, "Duración (días)*" %><br>
+								    	<%= f.select :pqTur_duracion, options_for_select( (1..10).step(1).map{|n| n%1 == 0 ? n.to_i : n}, @paquete_turistico.pqTur_duracion ), {prompt:"--SELECCIONE--"},options={class:"form-control", required: :required} %>
+								  	</div>
+						  			<div class="form-group">
+						    			<%= f.label :pqTur_descripcion, "Descripción*" %><br>
+						    			<%= f.text_area :pqTur_descripcion, options={class:"form-control", required: :required, cols:20, rows:8} %>
+						  			</div>
+									<div class="form-group">
+									    <%= f.label :pqTur_incluye, "Paquete incluye*" %><br>
+									    <%= f.text_area :pqTur_incluye, options={class:"form-control", required: :required, cols:20, rows:9} %>
+									</div>
+									<div class="form-group">
+									    <%= f.label :pqTur_noIncluye, "Paquete No Incluye*" %><br>
+									    <%= f.text_area :pqTur_noIncluye, options={class:"form-control", required: :required, cols:20, rows:8} %>
+									</div>
 								</div>
-							</div>
-							<div class="col-lg-6 col-md-6 tm-white-bg">
-								<div class="form-group">
-								    <%= f.label :pqTur_opcionales, "Actividades Opcionales" %><br>
-								    <%= f.text_area :pqTur_opcionales, options={class:"form-control", required: :required, rows:8} %>
+								<div class="col-lg-6 col-md-6 tm-white-bg">
+									<div class="form-group">
+									    <%= f.label :pqTur_opcionales, "Actividades Opcionales" %><br>
+									    <%= f.text_area :pqTur_opcionales, options={class:"form-control", required: :required, rows:8} %>
+									</div>
+									<div class="form-group">
+									    <%= f.label :pqTur_recomendaciones, "Recomendaciones*" %><br>
+									    <%= f.text_area :pqTur_recomendaciones, options={class:"form-control", required: :required, rows:8} %>
+									</div>
+									<div class="form-group">
+									    <%= f.label :pqTur_fechaVigenciaIni, "Fecha inicial de vigencia*" %><br>
+						                <div class='input-group date' id='datetimepicker1'>
+					                		<%= f.text_field :pqTur_fechaVigenciaIni, options = {class:"form-control"} %>
+					                    	<span class="input-group-addon">
+					                        	<span class="fa fa-calendar"></span>
+					                    	</span>
+					                	</div> 
+									</div>
+									<div class="form-group">
+									    <%= f.label :pqTur_fechaVigenciaFin, "Fecha final de vigencia*" %><br>
+						                <div class='input-group date' id='datetimepicker1'>
+					                		<%= f.text_field :pqTur_fechaVigenciaFin, options = {class:"form-control"} %>
+					                    	<span class="input-group-addon">
+					                        	<span class="fa fa-calendar"></span>
+					                    	</span>
+					                	</div>
+									</div>
+									<div class="form-group">
+									    <%= f.label :pqTur_fechaPromocionIni, "Fecha inicial de promoción" %><br>
+						                <div class='input-group date' id='datetimepicker1'>
+					                		<%= f.text_field :pqTur_fechaPromocionIni, options = {class:"form-control"} %>
+					                    	<span class="input-group-addon">
+					                        	<span class="fa fa-calendar"></span>
+					                    	</span>
+					                	</div>
+									</div>
+									<div class="form-group">
+									    <%= f.label :pqTur_fechaPromocionFin, "Fecha final de promoción" %><br>
+						                <div class='input-group date' id='datetimepicker1'>
+					                		<%= f.text_field :pqTur_fechaPromocionFin, options = {class:"form-control"} %>
+					                    	<span class="input-group-addon">
+					                        	<span class="fa fa-calendar"></span>
+					                    	</span>
+					                	</div>
+									</div>
+									<div class="form-group">
+									    <%= f.label :pqTur_estadoRegistro, "Estado" %><br>
+									    <%= f.select :pqTur_estadoRegistro, options_for_select(@estados.invert), {}, {class:"form-control"} %>
+									</div>
 								</div>
-								<div class="form-group">
-								    <%= f.label :pqTur_recomendaciones, "Recomendaciones*" %><br>
-								    <%= f.text_area :pqTur_recomendaciones, options={class:"form-control", required: :required, rows:8} %>
-								</div>
-								<div class="form-group">
-								    <%= f.label :pqTur_fechaVigenciaIni, "Fecha inicial de vigencia*" %><br>
-					                <div class='input-group date' id='datetimepicker1'>
-				                		<%= f.text_field :pqTur_fechaVigenciaIni, options = {class:"form-control"} %>
-				                    	<span class="input-group-addon">
-				                        	<span class="fa fa-calendar"></span>
-				                    	</span>
-				                	</div> 
-								</div>
-								<div class="form-group">
-								    <%= f.label :pqTur_fechaVigenciaFin, "Fecha final de vigencia*" %><br>
-					                <div class='input-group date' id='datetimepicker1'>
-				                		<%= f.text_field :pqTur_fechaVigenciaFin, options = {class:"form-control"} %>
-				                    	<span class="input-group-addon">
-				                        	<span class="fa fa-calendar"></span>
-				                    	</span>
-				                	</div>
-								</div>
-								<div class="form-group">
-								    <%= f.label :pqTur_fechaPromocionIni, "Fecha inicial de promoción" %><br>
-					                <div class='input-group date' id='datetimepicker1'>
-				                		<%= f.text_field :pqTur_fechaPromocionIni, options = {class:"form-control"} %>
-				                    	<span class="input-group-addon">
-				                        	<span class="fa fa-calendar"></span>
-				                    	</span>
-				                	</div>
-								</div>
-								<div class="form-group">
-								    <%= f.label :pqTur_fechaPromocionFin, "Fecha final de promoción" %><br>
-					                <div class='input-group date' id='datetimepicker1'>
-				                		<%= f.text_field :pqTur_fechaPromocionFin, options = {class:"form-control"} %>
-				                    	<span class="input-group-addon">
-				                        	<span class="fa fa-calendar"></span>
-				                    	</span>
-				                	</div>
-								</div>
-								<div class="form-group">
-								    <%= f.label :pqTur_estadoRegistro, "Estado" %><br>
-								    <%= f.select :pqTur_estadoRegistro, options_for_select(@estados.invert), {}, {class:"form-control"} %>
-								</div>
+								<p>&nbsp;</p>
 							</div>
 						</div>
 					</div>
+					<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="itinerario">
+						<div class="tm-search-box">
+							<div class="col-lg-12 tm-white-bg">
+								<%= f.fields_for :itinerarios do |h| %>
+									<% for i in 0..7 %>
+										<br>
+										<label><%= "Día " + (i + 1).to_s %></label>
+										<% valor = @itinerario[i] == nil ? "" : @itinerario[i].itnr_actividad %>
+										<%= h.text_area("itinerario_dia" + i.to_s, options={cols:60, rows:5, class:"form-control", name:"itinerario[dia][]", value: valor} ) %>
+									<% end %>
+								<% end %>
+							</div>
+						</div>
+					</div>
+					<p>&nbsp;</p>
 					<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="actividades">
 						<div class="tm-search-box">
 							<p>&nbsp;</p>
@@ -181,18 +199,13 @@
 							<p>&nbsp;</p>
 						</div>
 					</div>
-					<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="itinerario">
-						<div class="tm-search-box">
-						</div>
-					</div>
 					<div role="tabpanel" class="tab-pane fade in tm-white-bg" id="fechas">
 						<div class="tm-search-box">
 						</div>
 					</div>
 				</div>
 			</div>
-  		</div>
-  		
+		</div>
 		<div id="tm-form-footer">
 			<div class="actions">
 				<script>
