--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,6 @@
   
 </head>
 <body class="tm-gray-bg">
-	<div class="navbar-fixed-top">
 		<div class="row tm-blue-bg">
 			<div class="col-lg-12 col-md-12 col-sm-12 tm-login-bar">
 				<%= form_tag({controller: "about", action: "detalle_reserva"}, method: "get") do %>
@@ -32,12 +31,12 @@
 					<a href="#" class="inline"><strong>¿Olvidó su contraseña?</strong></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="#" class="inline"><strong>Registrarse</strong></a>
 				<% end %>
-				
 			</div>
 		</div>
+		<div class="tm-header">
 		<nav class="navbar" role="navigation">
 			<div class="container">
-				<div class="dropdown-header">
+				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
@@ -125,9 +124,9 @@
 			  </ul>
 			</div>	
 		</section>
-	<% else %>
+	<!-- <% else %>
 		<div class="tm-barra">
-		</div>
+		</div> -->
 	<% end %>
 	
 	<%= yield %>
