--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -184,7 +184,7 @@
 						<div class="tm-home-box-3-info">
 							<h3>Descanso, sol y playa</h3>
 							<h4>Bahía Solano</h4>
-							<p class="tm-home-box-3-description">Te invitamos a conocer los mejores sitios de la región.</p>
+							<p class="tm-home-box-3-description">Te invitamos a visitar los mejores sitios de la región.</p>
 							<h5>DESDE 1.250.000</h5>
 					        <div class="tm-home-box-2-container">
 							<a href="#" class="tm-home-box-2-link"><i class="fa fa-heart tm-home-box-2-icon border-right"></i></a>
